# bevy-in-space

./: .gitattributes  Cargo.toml
assets/spaceship/: ReadMe.md  config.toml  scene.blend  scene.blend1  scene.gltf
assets/straight/: scene.blend
game/assets/spaceship/: scene.blend1  scene.gltf  scene.txt
game/assets/spaceship/scripts/: init.rhai
game/assets/straight/: scene.blend  scene.blend1
game/src/: common_math.rs  fixed_joint_sample.rs  gentity.rs  main.rs  player.rs  spaceship.rs
game/src/gentity/: asset_loaders.rs  plugin.rs
game/src/gentity/asset_loaders/: toml_asset_loader.rs
game/src/gentity/gltf/: hook.rs  pp_collision.rs  pp_trigger.rs
gentity-cli/: Cargo.toml
gentity-cli/src/: main.rs
src/: asset_loaders.rs  bevy_stupid.rs  camera.rs  gentity.rs  gravity.rs  localization.rs  main.rs  orbit.rs  physics_math.rs  player.rs  solarsystem.rs  spaceship.rs
src/asset_loaders/: rhai_asset_loader.rs
src/gentity/: asset_loaders.rs  gltf.rs  plugin.rs
src/gentity/asset_loaders/: rhai_asset_loader.rs  toml_asset_loader.rs
src/gentity/gltf/: hook.rs  pp_collision.rs  pp_trigger.rs
