[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0


[dependencies]
bevy_framepace = "0.14.1"
big_space = "0.4.0"
log = "0.4.20"
simple-logging = "2.0.2"
rand = "0.8.5"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.12.1"
features = ["multi-threaded"]

[dependencies.bevy_rapier3d]
version = "0.23.0"
features = ["simd-stable", "parallel", "debug-render-3d"]
